tests/NormalTests/paczka1/small_fuzzy/82195041.err
Error in line 1: 6NlHJfm A416 45,7
Error in line 3: 6NlHJfm A163 29,9
